Tue Dec 12 22:38:06 UTC 2006  Steve Huston  <shuston@riverace.com>

        * apps/JAWS2/HTTPU/parse_url.h: Made the char* members const to
          resolve compile warnings about assignment of char* literals.

Tue Dec 12 19:54:05 UTC 2006  Steve Huston  <shuston@riverace.com>

        * apps/JAWS2/HTTPU/httpu.mpc: Must build HTTPU after JAWS2.

Tue Dec 12 19:54:04 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/fuzz.pl:

          Changed the regular expression to recognize #include's of files
          with double quotes within a version block.

Tue Dec 12 19:31:39 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/fuzz.pl:

          Corrected a bug where a non-ACE/TAO/CIAO file included within a
          version block was being marked as an error.

Tue Dec 12 17:01:42 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/config/MPC.cfg:

          Added $DDS_ROOT/MPC/config to the includes, since the
          .mpb files in DDS have been moved to this location, making
          them consistent with the location of similar files in
          TAO and CIAO.

Tue Dec 12 15:08:32 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Added the Trading unit test to the list.

Tue Dec 12 13:47:44 UTC 2006  Steve Huston  <shuston@riverace.com>

        * apps/JAWS2/HTTPU/httpu.mpc: Corrected build flags and added required
          link library JAWS2.

Tue Dec 12 06:05:38 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Add ACE_HAS_ISASTREAM_PROTOTYPE feature test.

Tue Dec 12 06:00:09 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Add ACE_HAS_PTHREAD_SIGMASK_PROTOTYPE feature test.

Tue Dec 12 05:13:33 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Add ACE_LACKS_MKTEMP_PROTOTYPE and ACE_LACKS_MKSTEMP_PROTOTYPE
          feature tests.

        * ace/README:
