@@ -1,3 +1,11 @@
+Wed Dec 13 01:41:19 UTC 2006  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
+
+        * ace/UUID.cpp:
+
+          Fixed a potential memory leak. Dynamic memory was allocated but
+          not freed under special circumstances. For details, check BUGID
+          2746. This closes BUGID 2746.
+
 Tue Dec 12 22:38:06 UTC 2006  Steve Huston  <shuston@riverace.com>
 
         * apps/JAWS2/HTTPU/parse_url.h: Made the char* members const to
